Fixing the content:after text not being centered on IE8

--- a/sass/example-styles.scss
+++ b/sass/example-styles.scss
@@ -15,5 +15,6 @@ h2{
 	&:after{
 		font-size: $std-font-size - 0.1;
 		display: block;
+		text-align: center;
 	}	
 }
